<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sixth_question"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/et_sixth_answer"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/et_height"
        android:inputType="text"
        android:textSize="20sp"
        android:textColor="#000000"
        tools:text="@string/answer"
        />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"/>

</LinearLayout>