<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textAlignment="center"
        android:paddingTop="@dimen/padding_medium"
        android:paddingBottom="@dimen/padding_small"

        />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:textAlignment="center"
        android:padding="@dimen/padding_small"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_phrase"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_super_small"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_super_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            />

        <TextView
            android:id="@+id/tv_first_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_almost_small"
            android:paddingEnd="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_almost_small"
            android:paddingRight="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            android:textColor="#000000"
            tools:text="Ответ 1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_phrase"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_super_small"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_super_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            />

        <TextView
            android:id="@+id/tv_second_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_almost_small"
            android:paddingEnd="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_almost_small"
            android:paddingRight="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            android:textColor="#000000"
            tools:text="Ответ 2"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_phrase"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_super_small"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_super_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            />

        <TextView
            android:id="@+id/tv_third_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_almost_small"
            android:paddingEnd="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_almost_small"
            android:paddingRight="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            android:textColor="#000000"
            tools:text="Ответ 3"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_phrase"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_super_small"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_super_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            />

        <TextView
            android:id="@+id/tv_fourth_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_almost_small"
            android:paddingEnd="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_almost_small"
            android:paddingRight="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            android:textColor="#000000"
            tools:text="Ответ 4"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifth_phrase"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_super_small"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_super_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            />

        <TextView
            android:id="@+id/tv_fifth_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_almost_small"
            android:paddingEnd="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_almost_small"
            android:paddingRight="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            android:textColor="#000000"
            tools:text="Ответ 5"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixth_phrase"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_super_small"
            android:paddingLeft="@dimen/padding_medium"
            android:paddingRight="@dimen/padding_super_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            />

        <TextView
            android:id="@+id/tv_sixth_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_almost_small"
            android:paddingEnd="@dimen/padding_small"
            android:paddingLeft="@dimen/padding_almost_small"
            android:paddingRight="@dimen/padding_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"
            android:textColor="#000000"
            tools:text="Ответ 6"
            />

    </LinearLayout>

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_luck"
        android:textAlignment="center"
        android:padding="@dimen/padding_small"/>

</LinearLayout>